--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "youtube-live-streaming",
   "version": "1.0.0",
   "description": "This is a simple node js code to create live streaming on YouTube 24/7 hours with ffempg",
-  "main": "app.js",
+  "main": "index.js",
   "engines" : { 
     "npm" : ">=9.7.2",
     "node" : ">=20.0.0"
     },
   "scripts": {
-    "start": "pm2 start app.js --deep-monitoring --attach --name live",
+    "start": "pm2 start index.js --deep-monitoring --attach --name live",
     "stop": "pm2 stop live",
     "restart": "pm2 restart live"
   },
